feat: complete svelte migration

--- a/src/button/button.scss
+++ b/src/button/button.scss
@@ -9,7 +9,7 @@
   box-shadow: none;
   border: none;
   margin: 0;
-  font-family: inherit;
+  font-family: var(--font-primary);
 
   cursor: pointer;
   color: var(--button-color);
