--- a/src/crypt.scss
+++ b/src/crypt.scss
@@ -1,6 +1,3 @@
+@use "~normalize.css/normalize.css";
 @use "theme";
-@use "utility";
-@use "button";
-@use "core-input";
-@use "form-field";
-@use "toggle-box";
+@use "defaults";
