--- a/src/theme.scss
+++ b/src/theme.scss
@@ -48,4 +48,9 @@
   --neutral--light-3: hsl(191, 67%, 14%);
   --neutral--light-4: hsl(191, 67%, 17%);
   --neutral--light-5: hsl(191, 67%, 20%);
+
+  /* Fonts */
+  --base-font-size: 16px;
+  --font-primary: "Titillium Web", sans-serif;
+  --font-accent: "Orbitron", sans-serif;
 }
