--- a/src/toggle-box/toggle-box.scss
+++ b/src/toggle-box/toggle-box.scss
@@ -14,6 +14,9 @@
   height: 1.2rem;
 
   label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     font-size: 0.75rem;
