--- a/src/defaults.scss
+++ b/src/defaults.scss
@@ -1,11 +1,17 @@
 @use "theme";
-@use "utility";
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Titillium+Web&display=swap");
 
 html {
+  box-sizing: border-box;
   font-family: var(--font-primary);
   background-color: var(--neutral);
   color: var(--primary);
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 input,
