--- a/src/crypt.scss
+++ b/src/crypt.scss
@@ -1,3 +1,13 @@
+/* Import non-component styles */
 @use "theme";
 @use "utility";
+
+/* Components */
+@use "components/attribute-bar/attribute-bar";
+@use "components/button/button";
+@use "components/core-input/core-input";
+@use "components/form-field/form-field";
+@use "components/toggle-box/toggle-box";
+
+/* Import 3rd party styles */
 @import "~normalize.css";
