--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -3,13 +3,13 @@
   --background-color-on: var(--neutral--light-2);
   --toggle-color-off: var(--neutral--light-4);
   --toggle-color-on: var(--primary);
-  --toggle-width: 60px;
-  --toggle-height: 34px;
-  --slider-size: 26px;
+  --toggle-width: 40px;
+  --toggle-height: 22px;
+  --slider-size: 17px;
   /* These are magic numbers, just play with them until it looks right */
   /* It absolutely will not be browser consistent. Just focus on chrome. */
-  --slider-space-left: 2.5px;
-  --slider-space-bottom: 3px;
+  --slider-space-left: 1.5px;
+  --slider-space-bottom: 1.5px;
 
   box-sizing: content-box;
   display: block;
@@ -65,20 +65,20 @@
     --background-color-off: var(--neutral-secondary);
     --background-color-on: var(--neutral-secondary--light-1);
     --toggle-color-off: var(--neutral-secondary--light-3);
-    --toggle-color-on: var(--secondary--light-1);
+    --toggle-color-on: var(--secondary);
   }
 
   &.success {
     --background-color-off: var(--neutral-success);
     --background-color-on: var(--neutral-success--light-1);
     --toggle-color-off: var(--neutral-success--light-3);
-    --toggle-color-on: var(--success--light-1);
+    --toggle-color-on: var(--success);
   }
 
   &.danger {
     --background-color-off: var(--neutral-danger);
     --background-color-on: var(--neutral-danger--light-1);
     --toggle-color-off: var(--neutral-danger--light-3);
-    --toggle-color-on: var(--danger--light-1);
+    --toggle-color-on: var(--danger);
   }
 }
