--- a/src/components/form-field/form-field.scss
+++ b/src/components/form-field/form-field.scss
@@ -105,4 +105,28 @@ $active-text-shadow: 0 0 0.15rem var(--primary);
       }
     }
   }
+
+  &.count {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    width: 8rem;
+    input {
+      text-align: center;
+      font-size: 2.5rem;
+      font-family: var(--font-accent);
+      width: 100%;
+      letter-spacing: 1px;
+    }
+    label {
+      @extend .crypt-form-label-muted;
+      font-size: 1rem;
+      font-weight: 300;
+      text-transform: none;
+      letter-spacing: 1px;
+    }
+    &:focus-within {
+      box-shadow: 0 0 4px inset var(--primary);
+    }
+  }
 }
