feat: add tabs component

--- a/src/crypt.scss
+++ b/src/crypt.scss
@@ -7,4 +7,5 @@
 @use "components/button/button";
 @use "components/core-input/core-input";
 @use "components/form-field/form-field";
+@use "components/tabs/tabs";
 @use "components/toggle-box/toggle-box";
