doc: correct tabs stories

--- a/src/components/tabs/tabs-large.html
+++ b/src/components/tabs/tabs-large.html
@@ -1,7 +1,7 @@
 <div class="container" style="width: 500px">
   <div class="crypt-tabs" data-group="primary">
-    <a class="tab" data-tab="tab-1">TAB 1</a>
-    <a class="tab active" data-tab="tab-2">TAB 2</a>
-    <a class="tab" data-tab="tab-3">TAB 3</a>
+    <a class="crypt-tab" data-tab="tab-1">TAB 1</a>
+    <a class="crypt-tab active" data-tab="tab-2">TAB 2</a>
+    <a class="crypt-tab" data-tab="tab-3">TAB 3</a>
   </div>
 </div>
