feat: add chip component

--- a/src/crypt.scss
+++ b/src/crypt.scss
@@ -5,6 +5,7 @@
 /* Components */
 @use "components/attribute-bar/attribute-bar";
 @use "components/button/button";
+@use "components/chip/chip";
 @use "components/core-input/core-input";
 @use "components/form-field/form-field";
 @use "components/tabs/tabs";
